tests/NormalTests/paczka1/small_fuzzy/60001108.err
Error in line 5: A677 S989 -3,8
Error in line 10: A677 A677 97,9
